// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shallow render 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-margin"
>
  <UserLocationsBox
    addresses={
      Object {
        "destination": Object {
          "city": "DESTINATION_ADDRESS_CITY",
          "country": "DESTINATION_ADDRESS_COUNTRY",
          "street": "DESTINATION_ADDRESS_STREET",
          "street_number": "DESTINATION_ADDRESS_STREET_NUMBER",
          "zip_code": "DESTINATION_ADDRESS_ZIP_CODE",
        },
        "origin": Object {
          "city": "ORIGIN_ADDRESS_CITY",
          "country": "ORIGIN_ADDRESS_COUNTRY",
          "street": "ORIGIN_ADDRESS_STREET",
          "street_number": "ORIGIN_ADDRESS_STREET_NUMBER",
          "zip_code": "ORIGIN_ADDRESS_ZIP_CODE",
        },
      }
    }
    cols={2}
    destroyAddress={[Function]}
    editLocation={[Function]}
    gradient={
      Object {
        "background": "-webkit-linear-gradient(-90deg, #333,#fafafa)",
      }
    }
    makePrimary={[Function]}
    t={[Function]}
    toggleActiveView={[Function]}
  />
</div>
`;

exports[`theme is falsy 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-margin"
>
  <UserLocationsBox
    addresses={
      Object {
        "destination": Object {
          "city": "DESTINATION_ADDRESS_CITY",
          "country": "DESTINATION_ADDRESS_COUNTRY",
          "street": "DESTINATION_ADDRESS_STREET",
          "street_number": "DESTINATION_ADDRESS_STREET_NUMBER",
          "zip_code": "DESTINATION_ADDRESS_ZIP_CODE",
        },
        "origin": Object {
          "city": "ORIGIN_ADDRESS_CITY",
          "country": "ORIGIN_ADDRESS_COUNTRY",
          "street": "ORIGIN_ADDRESS_STREET",
          "street_number": "ORIGIN_ADDRESS_STREET_NUMBER",
          "zip_code": "ORIGIN_ADDRESS_ZIP_CODE",
        },
      }
    }
    cols={2}
    destroyAddress={[Function]}
    editLocation={[Function]}
    gradient={
      Object {
        "color": "black",
      }
    }
    makePrimary={[Function]}
    t={[Function]}
    toggleActiveView={[Function]}
  />
</div>
`;
